Add btn and form elem hover, focus, active.

--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -599,7 +599,27 @@ picture {
   position: relative;
 }
 
-/* line 83, src/scss/_shared/_common.scss */
+/* line 86, src/scss/_shared/_common.scss */
+.c-form__field.is-focus .c-form__input-wrapper input,
+.c-form__field.is-focus .c-form__input-wrapper textarea,
+.c-form__field.is-focus .c-form__textarea-wrapper input,
+.c-form__field.is-focus .c-form__textarea-wrapper textarea {
+  border-color: #0a1723;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+}
+
+/* line 92, src/scss/_shared/_common.scss */
+.c-form__field.is-focus .c-form__input-wrapper:before,
+.c-form__field.is-focus .c-form__textarea-wrapper:before {
+  border-color: #8d96ae;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+}
+
+/* line 99, src/scss/_shared/_common.scss */
 .c-form__field--btn {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -609,7 +629,75 @@ picture {
           justify-content: flex-end;
 }
 
-/* line 89, src/scss/_shared/_common.scss */
+/* line 88, src/scss/_utilities/_mixin.scss */
+.c-form__input.placeholder, .c-form__textarea.placeholder {
+  color: #4d5964;
+}
+
+/* line 89, src/scss/_utilities/_mixin.scss */
+.c-form__input:-moz-placeholder, .c-form__textarea:-moz-placeholder {
+  color: #4d5964;
+}
+
+/* line 90, src/scss/_utilities/_mixin.scss */
+.c-form__input::-moz-placeholder, .c-form__textarea::-moz-placeholder {
+  color: #4d5964;
+}
+
+/* line 91, src/scss/_utilities/_mixin.scss */
+.c-form__input:-ms-input-placeholder, .c-form__textarea:-ms-input-placeholder {
+  color: #4d5964;
+}
+
+/* line 92, src/scss/_utilities/_mixin.scss */
+.c-form__input::-webkit-input-placeholder, .c-form__textarea::-webkit-input-placeholder {
+  color: #4d5964;
+}
+
+/* line 111, src/scss/_shared/_common.scss */
+.c-form__input-wrapper, .c-form__textarea-wrapper {
+  position: relative;
+  margin-bottom: 16px;
+}
+
+/* line 115, src/scss/_shared/_common.scss */
+.c-form__input-wrapper:before, .c-form__textarea-wrapper:before {
+  z-index: 0;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  border: 6px solid #e4eaef;
+  background-color: #e4eaef;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+}
+
+/* line 131, src/scss/_shared/_common.scss */
+.c-form__input-wrapper:hover input,
+.c-form__input-wrapper:hover textarea, .c-form__input-wrapper:active input,
+.c-form__input-wrapper:active textarea, .c-form__textarea-wrapper:hover input,
+.c-form__textarea-wrapper:hover textarea, .c-form__textarea-wrapper:active input,
+.c-form__textarea-wrapper:active textarea {
+  border-color: #0a1723;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+}
+
+/* line 137, src/scss/_shared/_common.scss */
+.c-form__input-wrapper:hover:before, .c-form__input-wrapper:active:before, .c-form__textarea-wrapper:hover:before, .c-form__textarea-wrapper:active:before {
+  border-color: #8d96ae;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+}
+
+/* line 145, src/scss/_shared/_common.scss */
 .c-form__input {
   outline: none;
   position: absolute;
@@ -625,56 +713,18 @@ picture {
   color: #4d5964;
   font-size: 16px;
   font-weight: 500;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
 }
 
-/* line 88, src/scss/_utilities/_mixin.scss */
-.c-form__input.placeholder {
-  color: #4d5964;
-}
-
-/* line 89, src/scss/_utilities/_mixin.scss */
-.c-form__input:-moz-placeholder {
-  color: #4d5964;
-}
-
-/* line 90, src/scss/_utilities/_mixin.scss */
-.c-form__input::-moz-placeholder {
-  color: #4d5964;
-}
-
-/* line 91, src/scss/_utilities/_mixin.scss */
-.c-form__input:-ms-input-placeholder {
-  color: #4d5964;
-}
-
-/* line 92, src/scss/_utilities/_mixin.scss */
-.c-form__input::-webkit-input-placeholder {
-  color: #4d5964;
-}
-
-/* line 107, src/scss/_shared/_common.scss */
+/* line 161, src/scss/_shared/_common.scss */
 .c-form__input-wrapper {
-  position: relative;
   min-height: 62px;
   background-color: #fff;
-  margin-bottom: 16px;
 }
 
-/* line 113, src/scss/_shared/_common.scss */
-.c-form__input-wrapper:before {
-  z-index: 0;
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  border: 6px solid #e4eaef;
-  background-color: #e4eaef;
-}
-
-/* line 128, src/scss/_shared/_common.scss */
+/* line 167, src/scss/_shared/_common.scss */
 .c-form__textarea {
   outline: none;
   resize: none;
@@ -682,7 +732,7 @@ picture {
   top: 0;
   left: 0;
   width: 100%;
-  height: calc(100% - 8px);
+  height: calc(100% - 6px);
   padding: 20px;
   border-radius: 5px;
   border: 3px solid #8d96ae;
@@ -691,30 +741,17 @@ picture {
   color: #4d5964;
   font-size: 16px;
   font-weight: 500;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
 }
 
-/* line 144, src/scss/_shared/_common.scss */
+/* line 184, src/scss/_shared/_common.scss */
 .c-form__textarea-wrapper {
-  position: relative;
   min-height: 309px;
-  margin-bottom: 16px;
 }
 
-/* line 149, src/scss/_shared/_common.scss */
-.c-form__textarea-wrapper:before {
-  z-index: 0;
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  border: 8px solid #e4eaef;
-  background-color: #e4eaef;
-}
-
-/* line 164, src/scss/_shared/_common.scss */
+/* line 189, src/scss/_shared/_common.scss */
 .c-form__select {
   overflow: hidden;
   height: 100%;
@@ -724,13 +761,13 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 164, src/scss/_shared/_common.scss */
+  /* line 189, src/scss/_shared/_common.scss */
   .c-form__select {
     min-height: 36px;
   }
 }
 
-/* line 175, src/scss/_shared/_common.scss */
+/* line 200, src/scss/_shared/_common.scss */
 .c-form__select:hover .c-form__select-icon-wrap {
   background-color: #d6273c;
   border-color: #ab182a;
@@ -739,7 +776,7 @@ picture {
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
 }
 
-/* line 180, src/scss/_shared/_common.scss */
+/* line 205, src/scss/_shared/_common.scss */
 .c-form__select:hover .c-form__select-icon-wrap i {
   text-shadow: 0 1px 0 #ab182a;
   color: #fff;
@@ -748,7 +785,7 @@ picture {
   transition: text-shadow 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* line 188, src/scss/_shared/_common.scss */
+/* line 213, src/scss/_shared/_common.scss */
 .c-form__select select {
   opacity: 0;
   cursor: pointer;
@@ -764,7 +801,7 @@ picture {
           box-shadow: none;
 }
 
-/* line 202, src/scss/_shared/_common.scss */
+/* line 227, src/scss/_shared/_common.scss */
 .c-form__select-value {
   white-space: nowrap;
   overflow: hidden;
@@ -785,19 +822,19 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 202, src/scss/_shared/_common.scss */
+  /* line 227, src/scss/_shared/_common.scss */
   .c-form__select-value {
     line-height: 36px;
     font-size: 14px;
   }
 }
 
-/* line 223, src/scss/_shared/_common.scss */
+/* line 248, src/scss/_shared/_common.scss */
 .c-form__select-value.is-choose {
   color: #000;
 }
 
-/* line 228, src/scss/_shared/_common.scss */
+/* line 253, src/scss/_shared/_common.scss */
 .c-form__select-icon {
   text-shadow: 0 1px 0 white;
   color: #4d5964;
@@ -809,7 +846,7 @@ picture {
   transition: text-shadow 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* line 236, src/scss/_shared/_common.scss */
+/* line 261, src/scss/_shared/_common.scss */
 .c-form__select-icon-wrap {
   position: absolute;
   display: -webkit-box;
@@ -834,7 +871,7 @@ picture {
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
 }
 
-/* line 254, src/scss/_shared/_common.scss */
+/* line 279, src/scss/_shared/_common.scss */
 .c-form__btn {
   outline: none;
   cursor: pointer;
@@ -851,36 +888,57 @@ picture {
   font-size: 24px;
   font-weight: bold;
   text-shadow: 0 2px 0 #af1932;
-  -webkit-transition: text-shadow 0.3s ease-in-out;
-  -o-transition: text-shadow 0.3s ease-in-out;
-  transition: text-shadow 0.3s ease-in-out;
+  -webkit-transition: line-height 0.3s ease-in-out, background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+  -o-transition: line-height 0.3s ease-in-out, background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+  transition: line-height 0.3s ease-in-out, background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 575px) {
-  /* line 254, src/scss/_shared/_common.scss */
+  /* line 279, src/scss/_shared/_common.scss */
   .c-form__btn {
     max-width: 100%;
   }
 }
 
-/* line 275, src/scss/_shared/_common.scss */
+/* line 300, src/scss/_shared/_common.scss */
 .c-form__btn:hover {
-  text-shadow: none;
-  -webkit-transition: text-shadow 0.3s ease-in-out;
-  -o-transition: text-shadow 0.3s ease-in-out;
-  transition: text-shadow 0.3s ease-in-out;
+  background-color: #23394e;
+  text-shadow: 0 2px 0 #0a1723;
+  -webkit-transition: background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
 }
 
-/* line 279, src/scss/_shared/_common.scss */
+/* line 305, src/scss/_shared/_common.scss */
 .c-form__btn:hover:before {
-  border-color: #d6273c;
-  background-color: #d6273c;
+  border-color: #0a1723;
+  background-color: #0a1723;
   -webkit-transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
   -o-transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
   transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-/* line 286, src/scss/_shared/_common.scss */
+/* line 312, src/scss/_shared/_common.scss */
+.c-form__btn:active {
+  line-height: 50px;
+  background-color: #d6273c;
+  text-shadow: 0 2px 0 #af1932;
+  -webkit-transition: line-height 0.3s ease-in-out, background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+  -o-transition: line-height 0.3s ease-in-out, background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+  transition: line-height 0.3s ease-in-out, background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+}
+
+/* line 318, src/scss/_shared/_common.scss */
+.c-form__btn:active:before {
+  bottom: 6px;
+  border-color: #af1932;
+  background-color: #af1932;
+  -webkit-transition: bottom 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  -o-transition: bottom 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: bottom 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+/* line 326, src/scss/_shared/_common.scss */
 .c-form__btn:before {
   z-index: -1;
   content: '';
@@ -892,9 +950,9 @@ picture {
   border-radius: 5px;
   border: 6px solid #af1932;
   background-color: #af1932;
-  -webkit-transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
-  -o-transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
-  transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  -webkit-transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out, bottom 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out, bottom 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out, bottom 0.3s ease-in-out;
 }
 
 /* line 4, src/scss/_shared/_iconPNG.scss */
