--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -46,21 +46,21 @@ block content
                     .c-form__group-col.c-form__group-col-0
                       .c-form__field.c-form__field--input
                         .c-form__input-wrapper
-                          input.c-form__input(type="text" name="" placeholder="Twoje imię*")
+                          input.c-form__input(type="text" name="" placeholder="Twoje imię*" form-focus-js)
 
                     .c-form__group-col.c-form__group-col-1
                       .c-form__field.c-form__field--input
                         .c-form__input-wrapper
-                          input.c-form__input(type="text" name="" placeholder="Twój telefon")
+                          input.c-form__input(type="text" name="" placeholder="Twój telefon" form-focus-js)
 
                     .c-form__group-col.c-form__group-col-2
                       .c-form__field.c-form__field--input
                         .c-form__input-wrapper
-                          input.c-form__input(type="text" name="" placeholder="Twój e-mail*")
+                          input.c-form__input(type="text" name="" placeholder="Twój e-mail*" form-focus-js)
 
                   .c-form__field.c-form__field--textarea
                     .c-form__textarea-wrapper
-                      textarea.c-form__textarea(name="" placeholder="Wiadomość*")
+                      textarea.c-form__textarea(name="" placeholder="Wiadomość*" form-focus-js)
 
                   .c-form__field.c-form__field--btn
                     button.c-form__btn(type="submit")!= "Wyślij"
