--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -80,9 +80,65 @@
   &__field {
     position: relative;
 
+    &.is-focus {
+      .c-form__input-wrapper,
+      .c-form__textarea-wrapper {
+        input,
+        textarea {
+          border-color: #0a1723;
+          @include transition(border-color);
+        }
+
+        &:before {
+          border-color: #8d96ae;
+          @include transition(border-color);
+        }
+      }
+    }
+
     &--btn {
       display: flex;
       justify-content: flex-end;
+    }
+  }
+
+  &__input,
+  &__textarea {
+    @include inputPlaceholder {
+      color: #4d5964;
+    }
+
+    &-wrapper {
+      position: relative;
+      margin-bottom: 16px;
+
+      &:before {
+        z-index: 0;
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 5px;
+        border: 6px solid #e4eaef;
+        background-color: #e4eaef;
+        @include transition(border-color);
+      }
+
+      &:hover,
+      &:active {
+        input,
+        textarea {
+          border-color: #0a1723;
+          @include transition(border-color);
+        }
+
+        &:before {
+          border-color: #8d96ae;
+          @include transition(border-color);
+        }
+      }
     }
   }
 
@@ -100,28 +156,11 @@
     color: #4d5964;
     font-size: 16px;
     font-weight: 500;
-    @include inputPlaceholder {
-      color: #4d5964;
-    }
+    @include transition(border-color);
 
     &-wrapper {
-      position: relative;
       min-height: 62px;
       background-color: $c-white;
-      margin-bottom: 16px;
-
-      &:before {
-        z-index: 0;
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 5px;
-        border: 6px solid #e4eaef;
-        background-color: #e4eaef;
-      }
     }
   }
 
@@ -132,7 +171,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: calc(100% - 8px);
+    height: calc(100% - 6px);
     padding: 20px;
     border-radius: 5px;
     border: 3px solid rgb(141, 150, 174);
@@ -140,24 +179,10 @@
     color: #4d5964;
     font-size: 16px;
     font-weight: 500;
+    @include transition(border-color);
 
     &-wrapper {
-      position: relative;
       min-height: 309px;
-      margin-bottom: 16px;
-
-      &:before {
-        z-index: 0;
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 5px;
-        border: 8px solid #e4eaef;
-        background-color: #e4eaef;
-      }
     }
   }
 
@@ -267,19 +292,34 @@
     font-size: 24px;
     font-weight: bold;
     text-shadow: 0 2px 0 rgba(#af1932, 1);
-    @include transition(text-shadow);
+    @include transition(line-height, background-color, text-shadow);
     @include respond(max-extra-small) {
       max-width: 100%;
     }
 
     &:hover {
-      text-shadow: none;
-      @include transition(text-shadow);
+      background-color: #23394e;
+      text-shadow: 0 2px 0 rgba(#0a1723, 1);
+      @include transition(background-color, text-shadow);
 
       &:before {
-        border-color: rgb(214, 39, 60);
-        background-color: rgb(214, 39, 60);
+        border-color: #0a1723;
+        background-color: #0a1723;
         @include transition(border-color, background-color);
+      }
+    }
+
+    &:active {
+      line-height: 50px;
+      background-color: rgb(214, 39, 60);
+      text-shadow: 0 2px 0 rgba(#af1932, 1);
+      @include transition(line-height, background-color, text-shadow);
+
+      &:before {
+        bottom: 6px;
+        border-color: #af1932;
+        background-color: #af1932;
+        @include transition(bottom, border-color, background-color);
       }
     }
 
@@ -294,7 +334,7 @@
       border-radius: 5px;
       border: 6px solid #af1932;
       background-color: #af1932;
-      @include transition(border-color, background-color);
+      @include transition(border-color, background-color, bottom);
     }
   }
 }
