--- a/src/scss/_components/_info.scss
+++ b/src/scss/_components/_info.scss
@@ -1,6 +1,9 @@
 // INFO :: START
 
 .info {
+  z-index: 0;
+  position: relative;
+
   &__wrapper {
     padding-top: 55px;
     padding-bottom: 95px;
