--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -229,6 +229,7 @@
   overflow: hidden;
   -o-text-overflow: ellipsis;
      text-overflow: ellipsis;
+  margin: 0;
   padding: 0 27px 0;
   font-size: 16px;
   line-height: 62px;
@@ -241,7 +242,7 @@
   border-bottom: 5px solid #e4eaef;
 }
 
-/* line 87, src/scss/_vendor/selectric/_selectric.scss */
+/* line 88, src/scss/_vendor/selectric/_selectric.scss */
 .selectric .button {
   display: block;
   position: absolute;
@@ -254,15 +255,18 @@
   border-bottom: 5px solid #bbc8d3;
   color: #BBB;
   text-align: center;
-  font: 0/0 a;
-  *font: 20px/62px Lucida Sans Unicode, Arial Unicode MS, Arial;
   -webkit-transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
   -o-transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
 }
 
-/* line 103, src/scss/_vendor/selectric/_selectric.scss */
+/* line 104, src/scss/_vendor/selectric/_selectric.scss */
 .selectric .button:after {
+  display: none;
+}
+
+/* line 108, src/scss/_vendor/selectric/_selectric.scss */
+.selectric .button:before {
   content: "↓";
   position: absolute;
   display: -webkit-box;
@@ -289,42 +293,42 @@
   transition: text-shadow 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* line 124, src/scss/_vendor/selectric/_selectric.scss */
+/* line 129, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-focus .selectric {
   border-color: #aaaaaa;
 }
 
-/* line 128, src/scss/_vendor/selectric/_selectric.scss */
+/* line 133, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-hover .selectric {
   border-color: #c4c4c4;
 }
 
-/* line 131, src/scss/_vendor/selectric/_selectric.scss */
+/* line 136, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-hover .selectric .button {
   color: #a2a2a2;
 }
 
-/* line 134, src/scss/_vendor/selectric/_selectric.scss */
+/* line 139, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-hover .selectric .button:after {
   border-top-color: #a2a2a2;
 }
 
-/* line 140, src/scss/_vendor/selectric/_selectric.scss */
+/* line 145, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-open {
   z-index: 9999;
 }
 
-/* line 143, src/scss/_vendor/selectric/_selectric.scss */
+/* line 148, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-open .selectric {
   border-color: #c4c4c4;
 }
 
-/* line 147, src/scss/_vendor/selectric/_selectric.scss */
+/* line 152, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-open .selectric-items {
   display: block;
 }
 
-/* line 152, src/scss/_vendor/selectric/_selectric.scss */
+/* line 157, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-disabled {
   filter: alpha(opacity=50);
   opacity: 0.5;
@@ -335,7 +339,7 @@
           user-select: none;
 }
 
-/* line 159, src/scss/_vendor/selectric/_selectric.scss */
+/* line 164, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-hide-select {
   position: relative;
   overflow: hidden;
@@ -343,13 +347,13 @@
   height: 0;
 }
 
-/* line 165, src/scss/_vendor/selectric/_selectric.scss */
+/* line 170, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-hide-select select {
   position: absolute;
   left: -100%;
 }
 
-/* line 170, src/scss/_vendor/selectric/_selectric.scss */
+/* line 175, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-hide-select.selectric-is-native {
   position: absolute;
   width: 100%;
@@ -357,7 +361,7 @@
   z-index: 10;
 }
 
-/* line 176, src/scss/_vendor/selectric/_selectric.scss */
+/* line 181, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-hide-select.selectric-is-native select {
   position: absolute;
   top: 0;
@@ -372,7 +376,7 @@
   opacity: 0;
 }
 
-/* line 191, src/scss/_vendor/selectric/_selectric.scss */
+/* line 196, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-input {
   position: absolute !important;
   top: 0 !important;
@@ -389,7 +393,7 @@
   background: none !important;
 }
 
-/* line 207, src/scss/_vendor/selectric/_selectric.scss */
+/* line 212, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-temp-show {
   position: absolute !important;
   visibility: hidden !important;
@@ -397,7 +401,7 @@
 }
 
 /* Items box */
-/* line 214, src/scss/_vendor/selectric/_selectric.scss */
+/* line 219, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items {
   display: none;
   position: absolute;
@@ -408,19 +412,19 @@
   z-index: -1;
 }
 
-/* line 225, src/scss/_vendor/selectric/_selectric.scss */
+/* line 230, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .selectric-scroll {
   height: 100%;
   overflow: auto;
 }
 
-/* line 230, src/scss/_vendor/selectric/_selectric.scss */
+/* line 235, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-above .selectric-items {
   top: auto;
   bottom: 100%;
 }
 
-/* line 235, src/scss/_vendor/selectric/_selectric.scss */
+/* line 240, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items ul, .selectric-items li {
   list-style: none;
   padding: 0;
@@ -430,7 +434,7 @@
   min-height: 20px;
 }
 
-/* line 244, src/scss/_vendor/selectric/_selectric.scss */
+/* line 249, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li {
   position: relative;
   display: -webkit-box;
@@ -446,7 +450,7 @@
   padding: 5px 17px;
 }
 
-/* line 256, src/scss/_vendor/selectric/_selectric.scss */
+/* line 261, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li:after {
   content: '';
   position: absolute;
@@ -457,18 +461,30 @@
   background-color: #e4eaef;
 }
 
-/* line 266, src/scss/_vendor/selectric/_selectric.scss */
+/* line 271, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li:last-of-type {
   border-bottom: 0;
 }
 
+/* line 275, src/scss/_vendor/selectric/_selectric.scss */
+.selectric-items li.selected {
+  background: #e4eaef;
+  color: #4d5964;
+}
+
 /* line 280, src/scss/_vendor/selectric/_selectric.scss */
+.selectric-items li.highlighted {
+  background: #e4eaef;
+  color: #4d5964;
+}
+
+/* line 285, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items li:hover {
   background: #e4eaef;
   color: #4d5964;
 }
 
-/* line 286, src/scss/_vendor/selectric/_selectric.scss */
+/* line 291, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .disabled {
   filter: alpha(opacity=50);
   opacity: 0.5;
@@ -481,7 +497,7 @@
           user-select: none;
 }
 
-/* line 296, src/scss/_vendor/selectric/_selectric.scss */
+/* line 301, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .selectric-group .selectric-group-label {
   font-weight: bold;
   padding-left: 10px;
@@ -494,13 +510,13 @@
   color: #444;
 }
 
-/* line 305, src/scss/_vendor/selectric/_selectric.scss */
+/* line 310, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .selectric-group.disabled li {
   filter: alpha(opacity=100);
   opacity: 1;
 }
 
-/* line 310, src/scss/_vendor/selectric/_selectric.scss */
+/* line 315, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-items .selectric-group li {
   padding-left: 25px;
 }
