Search page - create product section - w\ adaptive.

--- a/src/scss/_generated/_spritePNG.scss
+++ b/src/scss/_generated/_spritePNG.scss
@@ -1,20 +1,20 @@
 $sprite: (
   icon-nav-0: (
-    offset-x: 0px,
+    offset-x: -39px,
     offset-y: -53px,
     width: 31px,
     height: 32px,
-    total-width: 87px,
-    total-height: 85px,
+    total-width: 89px,
+    total-height: 87px,
     image: '../img/sprite.png'
   ),
   icon-nav-1: (
-    offset-x: -53px,
-    offset-y: 0px,
+    offset-x: 0px,
+    offset-y: -53px,
     width: 34px,
     height: 34px,
-    total-width: 87px,
-    total-height: 85px,
+    total-width: 89px,
+    total-height: 87px,
     image: '../img/sprite.png'
   ),
   label-contact: (
@@ -22,8 +22,17 @@ $sprite: (
     offset-y: 0px,
     width: 48px,
     height: 48px,
-    total-width: 87px,
-    total-height: 85px,
+    total-width: 89px,
+    total-height: 87px,
+    image: '../img/sprite.png'
+  ),
+  product-head: (
+    offset-x: -53px,
+    offset-y: 0px,
+    width: 36px,
+    height: 36px,
+    total-width: 89px,
+    total-height: 87px,
     image: '../img/sprite.png'
   ),
 );
@@ -79,4 +88,7 @@ $sprite: (
 }
 .label-contact:before {
   @include sprite(label-contact);
+}
+.product-head:before {
+  @include sprite(product-head);
 }
