--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,7 +9,7 @@ extends shared/_layout
 block content
   div.body.body--start(class!= contentClassName)
 
-    include ./components/_main
-    include ./components/_info
+    include components/homepage/_main
+    include components/homepage/_info
 
     .line
